; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_link_16_a7.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_link_16_a7.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_A = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_link_16_a7() #0 {
  %1 = load i64*, i64** @REG_A, align 8
  %2 = getelementptr inbounds i64, i64* %1, i64 7
  %3 = load i64, i64* %2, align 8
  %4 = sub nsw i64 %3, 4
  store i64 %4, i64* %2, align 8
  %5 = load i64*, i64** @REG_A, align 8
  %6 = getelementptr inbounds i64, i64* %5, i64 7
  %7 = load i64, i64* %6, align 8
  %8 = load i64*, i64** @REG_A, align 8
  %9 = getelementptr inbounds i64, i64* %8, i64 7
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @m68ki_write_32(i64 %7, i64 %10)
  %12 = load i64*, i64** @REG_A, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 7
  %14 = load i64, i64* %13, align 8
  %15 = call i32 (...) @OPER_I_16()
  %16 = call i64 @MAKE_INT_16(i32 %15)
  %17 = add nsw i64 %14, %16
  %18 = call i64 @MASK_OUT_ABOVE_32(i64 %17)
  %19 = load i64*, i64** @REG_A, align 8
  %20 = getelementptr inbounds i64, i64* %19, i64 7
  store i64 %18, i64* %20, align 8
  ret void
}

declare dso_local i32 @m68ki_write_32(i64, i64) #1

declare dso_local i64 @MASK_OUT_ABOVE_32(i64) #1

declare dso_local i64 @MAKE_INT_16(i32) #1

declare dso_local i32 @OPER_I_16(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
